--- a/document_multiple_records/i18n/fr.po
+++ b/document_multiple_records/i18n/fr.po
@@ -6,16 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-25 18:24+0000\n"
-"PO-Revision-Date: 2014-03-25 14:27-0500\n"
-"Last-Translator: Marc Cassuto <marc.cassuto@savoirfairelinux.com>\n"
+"POT-Creation-Date: 2014-09-29 21:32+0000\n"
+"PO-Revision-Date: 2014-09-29 17:33-0500\n"
+"Last-Translator: Sandy Carter <sandy.carter@savoirfairelinux.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.9\n"
 
 #. module: document_multiple_records
 #: field:ir.attachment.document,res_id:0
@@ -26,6 +26,13 @@ msgstr "Identifiant de la ressource"
 #: view:ir.attachment.existing.doc:0
 msgid "Select document(s)"
 msgstr "Choisir un(des) document(s)"
+
+#. module: document_multiple_records
+#. openerp-web
+#: code:addons/document_multiple_records/static/src/xml/document.xml:7
+#, python-format
+msgid "Add existing document..."
+msgstr " Ajouter un document existant..."
 
 #. module: document_multiple_records
 #: field:ir.attachment.document,attachment_id:0
@@ -39,7 +46,7 @@ msgstr "AttachmentDocumentWizardTree"
 
 #. module: document_multiple_records
 #. openerp-web
-#: code:addons/document_multiple_records/static/src/js/document.js:42
+#: code:addons/document_multiple_records/static/src/js/document.js:67
 #, python-format
 msgid "Uploading Error"
 msgstr "Erreur lors du transfert"
@@ -70,6 +77,13 @@ msgid "ir.attachment"
 msgstr "ir.attachment"
 
 #. module: document_multiple_records
+#. openerp-web
+#: code:addons/document_multiple_records/static/src/js/document.js:25
+#, python-format
+msgid "Add existing document"
+msgstr " Ajouter un document existant"
+
+#. module: document_multiple_records
 #: view:ir.attachment:0
 msgid "Indexed Content"
 msgstr "Contenu indexé"
@@ -80,7 +94,7 @@ msgid "AttachmentDocumentForm"
 msgstr "AttachmentDocumentForm"
 
 #. module: document_multiple_records
-#: code:addons/document_multiple_records/wizard/document_wizard.py:48
+#: code:addons/document_multiple_records/wizard/document_wizard.py:52
 #, python-format
 msgid "Error"
 msgstr "Erreur"
@@ -96,13 +110,9 @@ msgid "The record id this is attached to."
 msgstr "L'identifiant de l'enregistrement auquel est ce document est joint."
 
 #. module: document_multiple_records
-#. openerp-web
-#: code:addons/document_multiple_records/static/src/js/document.js:25
-#: model:ir.actions.act_window,name:document_multiple_records.action_view_document
-#: view:ir.attachment.existing.doc:0
-#, python-format
-msgid "Add existing document/attachment"
-msgstr "Ajouter un document déjà joint dans le système"
+#: field:ir.attachment.existing.doc,attachment_ids:0
+msgid "Attachments"
+msgstr "Documents joints"
 
 #. module: document_multiple_records
 #: model:ir.model,name:document_multiple_records.model_ir_attachment_existing_doc
@@ -110,16 +120,10 @@ msgid "Add existing document/attachment wizard"
 msgstr "Assistant pour ajouter un document déjà joint dans le système"
 
 #. module: document_multiple_records
-#: field:ir.attachment.existing.doc,attachment_ids:0
-msgid "Attachments"
-msgstr "Documents joints"
-
-#. module: document_multiple_records
-#. openerp-web
-#: code:addons/document_multiple_records/static/src/xml/document.xml:7
-#, python-format
-msgid "Add existing document/attachment..."
-msgstr "Ajouter un document déjà joint dans le système..."
+#: model:ir.actions.act_window,name:document_multiple_records.action_view_document
+#: view:ir.attachment.existing.doc:0
+msgid "Add existing document/attachment"
+msgstr "Ajouter un document déjà joint dans le système"
 
 #. module: document_multiple_records
 #: field:ir.attachment.document,res_model:0
@@ -128,13 +132,20 @@ msgstr "Modèle"
 
 #. module: document_multiple_records
 #: view:ir.attachment.existing.doc:0
+msgid "Apply"
+msgstr "Appliquer"
+
+#. module: document_multiple_records
+#: view:ir.attachment.existing.doc:0
 msgid "Cancel"
 msgstr "Annuler"
 
 #. module: document_multiple_records
-#: view:ir.attachment.existing.doc:0
-msgid "Apply"
-msgstr "Appliquer"
+#. openerp-web
+#: code:addons/document_multiple_records/static/src/js/document.js:56
+#, python-format
+msgid "Do you really want to delete this attachment ?"
+msgstr "Voulez-vous réellement supprimer cette pièce jointe ?"
 
 #. module: document_multiple_records
 #: view:ir.attachment.existing.doc:0
@@ -142,7 +153,7 @@ msgid "or"
 msgstr "ou"
 
 #. module: document_multiple_records
-#: code:addons/document_multiple_records/wizard/document_wizard.py:49
+#: code:addons/document_multiple_records/wizard/document_wizard.py:53
 #, python-format
 msgid "You have to select at least 1 Document. And try again"
 msgstr "Vous devez sélectionner au moins un document et essayer de nouveau."
